# el-monstruo

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rotation-test-2026-05-04.txt  .trigger  AGENTS.md  ARCHIVOS_A_PORTAR.md  CABINA_DUAL_CLASE_MUNDIAL_TODO.md  CLAUDE.md  COWORK_DECISIONES_VIVAS.md  Dockerfile  Dockerfile.web  Dockerfile.worker  ESTADO_SISTEMA.md  HANDOFF_AL_OTRO_HILO.md  INVENTARIO_QUANTUM_REALM_v0.8.md  MONSTRUO_GENOME.yaml  PISO_3_AGRUPADOR.yaml  PISO_4_AREAS.yaml  PLAN_REGULADOR.yaml  README.md  _pre_commit_test.py  _tmp_notif.md  conftest.py  docker-compose.yml  ivd_sprint21.py  pyproject.toml  railway.cron.toml  railway.rem-cycle.toml  railway.toml  railway.worker.toml  renovate.json  requirements-eval.txt  requirements.txt  run.py  smoke_test_mcps.sh  test_code_exec.py
.github/: dependabot.yml
_genome_out/: genome_now.json  github.json  live24h.json  railway.json  supabase.json
_scratch/: railway_audit.py  railway_status_loop.sh  railway_summarize.py  test_genome_refresh_scheduler.py
bot/: __init__.py  hitl_handler.py
bridge/: .cowork_inbox_last_seen  ANEXO_PROTOCOLOS_SATELITE_v1_2026_05_28.md  AUDIT_CATASTRO_IAS_COMPLETO_2026_05_11.md  CATASTRO_ARCHITECTURE_FAQ.md  CATASTRO_OPERATIONAL_GUIDE.md  CONTRATO_SUENO_FIRMADO_001_2026_05_28.md  COWORK_OPERATING_SYSTEM_v0_1_2026_05_10.md  CREDENTIALS_AUDIT_2026-05-04.md  D3_latido_autonomo_spec_2026_05_11.md  DRIFT_009_RECONCILIATION_98_VS_111_2026_05_12.json  DRIFT_012_FORENSIC_DSC_AUDIT_2026_05_12.json  EMBRION_WRITE_POLICY_GUIDE.md  ESTADO_MONSTRUO_2026_05_10_vs_PLANES.md  FORJA_OMEGA_TESIS_v1_1_2026_05_28.md  FORJA_OMEGA_TESIS_v1_2_2026_05_28.md  FORJA_OMEGA_VISUAL_PROMPT_v2_1_2026_05_28.md  FORJA_OMEGA_VISUAL_PROMPT_v2_2026_05_28.md  HANDOFF_CONTEXT.md  HANDOFF_COWORK_NUEVO_2026_05_11.md  HANDOFF_COWORK_NUEVO_MANUS_2026_05_11.md  PROMPT_COWORK_CAPILLA_ONBOARDING.md  PROMPT_COWORK_CAPILLA_ONBOARDING_v2.md  PROMPT_COWORK_CIP_ONBOARDING.md  PROMPT_COWORK_FASE_III.md  PROMPT_HILO_PRINCIPAL_MONSTRUO_v1.md  PROMPT_MANUS_CATASTRO_2026_05_06.md  PROMPT_MANUS_EJECUTOR_2026_05_06.md  REPORTE_MEGA_CATASTRO_SPRINT_88_3_CIERRE.md  RESUMEN_EJECUTIVO_NOCTURNO_2026_05_28.md  ROADMAP_META_CATASTRO_SPRINT_90.md  SPRINT_86_8_OPERATIONAL_GUIDE.md  SPRINT_87_1_OPERATIONAL_GUIDE.md  SPRINT_87_2_OPERATIONAL_GUIDE.md  T3_TELEGRAM_GUARDIAN_BLOQUEADO_FIRMA_HUMANA.md  _pr_body_mobile_realignment_001.md  a2ui_spec_draft_FIRMADO_2026_05_11.md  a2ui_spec_draft_para_firma.md  audit_dscs_aspiracionales_2026_05_07.md  audit_rls_2026_05_10.md  checklist_ios_code_signing_para_alfredo.md  (+304 more)
cidp/: Dockerfile  __init__.py  api_server.py  client.py  entrypoint.py  railway.toml  requirements.txt  start.sh
config/: __init__.py  litellm_config.yaml  model_catalog.py
contracts/: __init__.py  checkpoint_model.py  event_envelope.py  kernel_interface.py  memory_interface.py  policy_hook.py
core/: action_envelope.py  action_validator.py  composite_risk.py  policy_engine.py
deploy/: docker-compose.openwebui.yml  open-webui-railway.md
discovery_forense/: .verify_cowork.sh  CIP_MANIFEST_PARA_COWORK.md  MATRIZ_CRUCES_PROYECTOS.md  MCP_EVIDENCE.md  NOTION_PAGINAS_RAIZ_PARA_CONECTAR.md  PROMPT_PARA_NOTION_AI.md  README_COWORK.md  REPORTE_FORENSE_MAGNA.md  load_credentials.sh  phase6_consolidated.json  phase6_top50.json  setup_mcps.sh  top30_previews.json
docs/: ANALISIS_CAPA1_FISICA_ENGRANAJES.md  ANALISIS_FALLO_AGENTICO_vs_13_OBJETIVOS.md  ANALISIS_GUARDIAN_DE_LOS_OBJETIVOS.md  ANALISIS_RELOJ_SUIZO_CAPA2.md  ARQUITECTURA_ENGRANAJE_v1.0.md  ARQUITECTURA_RELOJ_SUIZO_v1.0.md  AUDITORIA_OBJETIVOS_SPRINTS_55_70.md  AUDIT_ROADMAP_APENDICE_1_3_FACTOR_VELOCITY_RECALIBRADO.md  AUDIT_ROADMAP_COWORK_2026-05-04.md  BACKLOG_TECNICO_MONSTRUO_VS_MANUS.md  BRAND_ENGINE_ESTRATEGIA.md  CRUCE_SPRINT52_vs_13OBJETIVOS.md  CRUCE_SPRINT53_vs_13OBJETIVOS.md  CRUCE_SPRINT54_vs_13OBJETIVOS.md  CRUCE_SPRINT55_vs_13OBJETIVOS.md  CRUCE_SPRINT56_vs_13OBJETIVOS.md  CRUCE_SPRINT57_vs_13OBJETIVOS.md  CRUCE_SPRINT58_vs_13OBJETIVOS.md  CRUCE_SPRINT59_vs_13OBJETIVOS.md  CRUCE_SPRINT60_vs_13OBJETIVOS.md  CRUCE_SPRINT61_vs_13OBJETIVOS.md  CRUCE_SPRINT62_vs_13OBJETIVOS.md  CRUCE_SPRINT63_vs_13OBJETIVOS.md  CRUCE_SPRINT64_vs_13OBJETIVOS.md  CRUCE_SPRINT65_vs_13OBJETIVOS.md  CRUCE_SPRINT66_vs_13OBJETIVOS.md  CRUCE_SPRINT67_vs_13OBJETIVOS.md  CRUCE_SPRINT68_vs_14OBJETIVOS.md  CRUCE_SPRINT69_vs_14OBJETIVOS.md  CRUCE_SPRINT70_vs_14OBJETIVOS.md  CRUCE_SPRINT71_vs_14OBJETIVOS.md  CRUCE_SPRINT72_vs_14OBJETIVOS.md  CRUCE_SPRINT73_vs_14OBJETIVOS.md  CRUCE_SPRINT74_vs_14OBJETIVOS.md  CRUCE_SPRINT75_vs_14OBJETIVOS.md  CRUCE_SPRINT79_vs_14OBJETIVOS.md  CRUCE_SPRINT80_vs_14OBJETIVOS.md  DIRECTIVA_HILO_A_FASE1.md  DIVISION_RESPONSABILIDADES_HILOS.md  DOCTRINA_ANTI_DORY_MANUS.md  (+52 more)
evaluation/: garak_config.yaml  promptfoo_redteam.yaml  ragas_config.py  seed_mvm_dataset.py  skill_evaluator.py
forja_omega_tramo_1/: .gitignore  CIERRE_DIA_2026_05_28.md  PROMPT_HILO_DTA_AUTOMATIZACIONES.md  bitacora.jsonl  bitacora_index.md
interfaces_context_fabric/: 00_START_HERE_FOR_CHATGPT.md  01_CONTEXT_INDEX.md  02_SOURCE_LEDGER.jsonl  03_GAPS_AND_UNKNOWN_UNKNOWNS.md  04_DECISION_LEDGER.md  05_CHATGPT_REQUESTS_TO_MANUS.md  ITERATION_001_REPORT.md
kernel/: __init__.py  a2a_registry.py  a2a_routes.py  adaptive_model_selector.py  agui_adapter.py  anti_ghost.py  audit_middleware.py  auth.py  autonomy_routes.py  background_store.py  browser_automation.py  causal_decomposer.py  causal_seeder.py  causal_simulator.py  command_center_bridge.py  cost_optimizer.py  cowork_routes.py  deep_think_pipeline.py  deployments_routes.py  dossier_cache.py  embrion_budget.py  embrion_inbox.py  embrion_inbox_parser.py  embrion_inbox_sanitizer.py  embrion_loop.py  embrion_routes.py  embrion_scheduler.py  embrion_self_verifier.py  embrion_tecnico.py  embrion_ventas.py  embrion_vigia.py  embrion_write_policy.py  emergent_tracker.py  engine.py  error_memory.py  execution_verifier.py  external_agents.py  factory_routes.py  fallback_engine.py  fastmcp_server.py  (+41 more)
memory/: __init__.py  causal_kb.py  conversation.py  (+11 more)
(+3430 files in other folders)
