[project]
name = "el-monstruo"
version = "0.1.0"
description = "El Monstruo — Sistema de Inteligencia Artificial Soberana"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Alfredo Góngora", email = "alfredogl1@hivecom.mx"},
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "skills/el-monstruo-bot/references/bot_source_code.py",  # Reference snapshot, not runnable
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "N806",   # Variable in function should be lowercase (intentional for config maps)
    "N811",   # Constant imported as non-constant (intentional aliases)
    "N814",   # Camelcase imported as constant (intentional)
    "E741",   # Ambiguous variable name (context-clear in our codebase)
    "E501",   # Line too long — enforced by ruff format, not lint
    "N818",   # Exception name should end with Error — legacy naming
    "W291",   # Trailing whitespace — handled by ruff format
    "W293",   # Whitespace before ':' — handled by ruff format
    "E722",   # Do not use bare 'except' — legacy patterns
    "F841",   # Local variable assigned but never used — legacy code
    "E701",   # Multiple statements on one line — legacy patterns
    "N801",   # Class name should use CapWords — legacy naming
    "F821",   # Undefined name — false positives from syntax-error files
    "F823",   # Local variable referenced before assignment
    "E731",   # Lambda assignment — legacy patterns
]

[tool.ruff.lint.per-file-ignores]
"kernel/main.py" = ["E402"]
"router/engine.py" = ["E402"]
"cidp/scripts/run_cidp.py" = ["E402"]
"scripts/*" = ["E402"]
"tests/*" = ["E402"]
"tools/*" = ["E402"]
"kernel/*" = ["E402"]
"apps/*" = ["E402"]
"cidp/*" = ["E402"]
"skills/*" = ["E402", "E999"]
